# sequent-core

./: .gitignore  LICENSE  README.md  sequent-core.cabal
doc/spec/: .gitignore  Lint.ott  Makefile  OpSem.ott  Syntax.ott  preamble.sty  spec.mng  types.tex
examples/: Cases.hs  Compl.hs  Contification.hs  Example.hs  Sizes.hs  SpecConstrExpl.hs  Strictness.hs
src/: SequentPlugin.hs
src/Language/: SequentCore.hs
src/Language/SequentCore/: Arity.hs  Dump.hs  Inspect.hs  Lint.hs  OccurAnal.hs  Ops.hs  Plugin.hs  Pretty.hs  Pretty.hs-boot  Simpl.hs  SpecConstr.hs  Subst.hs  Syntax.hs  Syntax.hs-boot  Translate.hs  Translate.hs-boot  Util.hs  WiredIn.hs
src/Language/SequentCore/Simpl/: Env.hs  ExprSize.hs  Monad.hs  Util.hs  Util.hs-boot
src/Language/SequentCore/Syntax/: Util.hs
