name:                sequent-core
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Luke Maurer, Paul Downen, Iavor S. Diatchki
maintainer:          maurerl@cs.uoregon.edu
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.SequentCore
                       Language.SequentCore.Dump
                       Language.SequentCore.Plugin
                       Language.SequentCore.Pretty
                       Language.SequentCore.Syntax
  build-depends:       base, ghc
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable Example
  hs-source-dirs:      examples
  Main-is:             Example.hs
  build-depends:       base, sequent-core
  default-language:    Haskell2010
  ghc-options:         -Wall -fplugin=Language.SequentCore.Dump -dcore-lint
